# fraud_detection

./: .gitignore  README.md  pyproject.toml
faud_detection/: data_exploration.ipynb  training.ipynb
