[tool.poetry]
name = "fraud-detection"
version = "0.1.0"
description = ""
authors = ["kruu <kruu@zhaw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
plotly = "^5.23.0"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
lightgbm = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
